Implement full BitTorrent download pipeline
     - Add TorrentManager for piece state tracking and rarest-first selection
     - Implement peer wire protocol: handshake, Interested, pipelined block
       requests (WINDOW_SIZE=5), SHA-1 hash verification per piece
     - Add UDP tracker support (BEP-0015) with announce-list fallback
     - Support single-file and multi-file torrents
     - Add main download loop with multi-peer thread pool, progress logging,
       tracker re-query, and lifecycle events (started/completed)