@@ -5,43 +5,155 @@ import com.jtorrent.bittorrent.model.Peer;
 import com.jtorrent.bittorrent.utils.PeerIdGenerator;
 import org.springframework.stereotype.Service;
 
+import java.net.DatagramPacket;
+import java.net.DatagramSocket;
 import java.net.HttpURLConnection;
+import java.net.InetAddress;
+import java.net.URI;
 import java.net.URL;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.Random;
 
 @Service
 public class TrackerService {
 
-    public Map<String, Object> getPeers(String announceUrl, byte[] infoHash, long fileLength) throws Exception {
-        // 1. Manually encode the Info Hash for the URL
-        StringBuilder hexHash = new StringBuilder();
-        for (byte b : infoHash) {
-            hexHash.append(String.format("%%%02x", b));
+    public Map<String, Object> getPeers(List<String> trackers, byte[] infoHash, long fileLength, String event) throws Exception {
+        Exception lastException = null;
+
+        for (String url : trackers) {
+            try {
+                System.out.println("Attempting tracker: " + url);
+
+                if (url.startsWith("udp://")) {
+                    return getPeersUDP(url, infoHash, fileLength, event);
+                } else if (url.startsWith("http://") || url.startsWith("https://")) {
+                    return getPeersHTTP(url, infoHash, fileLength, event);
+                } else {
+                    System.out.println("Skipping unsupported tracker protocol: " + url);
+                }
+
+            } catch (Exception e) {
+                System.err.println("Tracker failed (" + url + "): " + e.getMessage());
+                lastException = e;
+            }
         }
 
-        // 2. Build the URL string
-        String urlString = announceUrl +
-                "?info_hash=" + hexHash +
-                "&peer_id=" + PeerIdGenerator.generate() +
-                "&port=6881" +
-                "&uploaded=0" +
-                "&downloaded=0" +
-                "&left=" + fileLength +
-                "&compact=1";
+        throw new RuntimeException("All trackers failed to respond. Last error: " +
+                (lastException != null ? lastException.getMessage() : "Unknown"));
+    }
 
-        // 3. Use the classic HttpURLConnection
-        URL url = new URL(urlString);
+    private Map<String, Object> getPeersUDP(String announceUrl, byte[] infoHash, long fileLength, String event) throws Exception {
+        URI uri = new URI(announceUrl);
+        String host = uri.getHost();
+        int port = uri.getPort() == -1 ? 80 : uri.getPort();
+
+        try (DatagramSocket socket = new DatagramSocket()) {
+            socket.setSoTimeout(5000);
+            InetAddress address = InetAddress.getByName(host);
+            Random random = new Random();
+
+            long magicConnectionId = 0x41727101980L;
+            int connectTransactionId = random.nextInt();
+
+            ByteBuffer connectReq = ByteBuffer.allocate(16);
+            connectReq.putLong(magicConnectionId);
+            connectReq.putInt(0);
+            connectReq.putInt(connectTransactionId);
+
+            DatagramPacket connectPacket = new DatagramPacket(connectReq.array(), 16, address, port);
+            socket.send(connectPacket);
+
+            byte[] connectResBuf = new byte[16];
+            DatagramPacket connectResPacket = new DatagramPacket(connectResBuf, 16);
+            socket.receive(connectResPacket);
+
+            ByteBuffer connectRes = ByteBuffer.wrap(connectResBuf);
+            if (connectRes.getInt() != 0 || connectRes.getInt() != connectTransactionId) {
+                throw new RuntimeException("Invalid UDP connection response from tracker");
+            }
+            long connectionId = connectRes.getLong();
+
+            int eventCode = 0;
+            if (event != null) {
+                if (event.equalsIgnoreCase("completed")) eventCode = 1;
+                else if (event.equalsIgnoreCase("started")) eventCode = 2;
+                else if (event.equalsIgnoreCase("stopped")) eventCode = 3;
+            }
+
+            int announceTransactionId = random.nextInt();
+            ByteBuffer announceReq = ByteBuffer.allocate(98);
+            announceReq.putLong(connectionId);
+            announceReq.putInt(1);
+            announceReq.putInt(announceTransactionId);
+            announceReq.put(infoHash);
+            announceReq.put(PeerIdGenerator.generate().getBytes(StandardCharsets.ISO_8859_1));
+            announceReq.putLong(0);
+            announceReq.putLong(fileLength);
+            announceReq.putLong(0);
+            announceReq.putInt(eventCode);
+            announceReq.putInt(0);
+            announceReq.putInt(random.nextInt());
+            announceReq.putInt(50);
+            announceReq.putShort((short) 6881);
+
+            DatagramPacket announcePacket = new DatagramPacket(announceReq.array(), 98, address, port);
+            socket.send(announcePacket);
+
+            byte[] announceResBuf = new byte[4096];
+            DatagramPacket announceResPacket = new DatagramPacket(announceResBuf, announceResBuf.length);
+            socket.receive(announceResPacket);
+
+            ByteBuffer announceRes = ByteBuffer.wrap(announceResBuf, 0, announceResPacket.getLength());
+            if (announceRes.getInt() != 1 || announceRes.getInt() != announceTransactionId) {
+                throw new RuntimeException("Invalid UDP announce response from tracker");
+            }
+
+            int interval = announceRes.getInt();
+            int leechers = announceRes.getInt();
+            int seeders = announceRes.getInt();
+
+            byte[] peersBytes = new byte[announceRes.remaining()];
+            announceRes.get(peersBytes);
+
+            Map<String, Object> responseMap = new HashMap<>();
+            responseMap.put("interval", interval);
+            responseMap.put("peers", peersBytes);
+
+            return responseMap;
+        }
+    }
+
+    private Map<String, Object> getPeersHTTP(String announceUrl, byte[] infoHash, long fileLength, String event) throws Exception {
+        StringBuilder hexHash = new StringBuilder();
+        for (byte b : infoHash) {
+            hexHash.append(String.format("%%%02x", b & 0xFF));
+        }
+
+        StringBuilder urlBuilder = new StringBuilder();
+        urlBuilder.append(announceUrl)
+                .append("?info_hash=").append(hexHash)
+                .append("&peer_id=").append(PeerIdGenerator.generate())
+                .append("&port=6881")
+                .append("&uploaded=0")
+                .append("&downloaded=0")
+                .append("&left=").append(fileLength)
+                .append("&compact=1")
+                .append("&numwant=50");
+
+        if (event != null && !event.isEmpty()) {
+            urlBuilder.append("&event=").append(event);
+        }
+
+        URL url = new URL(urlBuilder.toString());
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
 
-        // 4. Read the raw bytes directly from the input stream
         try (java.io.InputStream in = connection.getInputStream()) {
             byte[] responseBytes = in.readAllBytes();
-
-            // 5. Pass those bytes to your working BencodeParser
             BencodeParser parser = new BencodeParser(responseBytes);
             return (Map<String, Object>) parser.parse();
         } finally {
@@ -52,16 +164,14 @@ public class TrackerService {
     public java.util.List<Peer> parseCompactPeers(Object peersBlob) {
         byte[] peers;
 
-        // Handle both String and byte[] depending on your parser's output
         if (peersBlob instanceof String s) {
-            peers = s.getBytes(java.nio.charset.StandardCharsets.ISO_8859_1);
+            peers = s.getBytes(StandardCharsets.ISO_8859_1);
         } else {
             peers = (byte[]) peersBlob;
         }
 
         java.util.List<Peer> peerList = new java.util.ArrayList<>();
 
-        // Every 6 bytes = 1 Peer (4 bytes IP + 2 bytes Port)
         for (int i = 0; i <= peers.length - 6; i += 6) {
             String ip = String.format("%d.%d.%d.%d",
                     peers[i] & 0xFF,
@@ -69,7 +179,6 @@ public class TrackerService {
                     peers[i + 2] & 0xFF,
                     peers[i + 3] & 0xFF);
 
-            // Bit-shifting to combine two bytes into one 16-bit port number
             int port = ((peers[i + 4] & 0xFF) << 8) | (peers[i + 5] & 0xFF);
 
             peerList.add(new Peer(ip, port));
